<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/sign_in_toolbar"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:minHeight="?attr/actionBarSize">

        <TextView
            android:textStyle="bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/title_sign_in"
            android:textColor="@color/mt_gray"
            android:fontFamily="sans-serif-smallcaps"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

    </android.support.v7.widget.Toolbar>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <LinearLayout
            android:gravity="center"
            android:id="@+id/email_login_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin">

            <TextView
                android:text="@string/app_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-smallcaps"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"/>

            <ImageView
                android:layout_margin="10dp"
                android:src="@drawable/web_hi_res"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                tools:ignore="ContentDescription" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:src="@drawable/ic_mail_outline"
                    tools:ignore="ContentDescription" />
                <Space
                    android:layout_width="14dp"
                    android:layout_height="wrap_content"/>
                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <EditText
                        android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
                        android:id="@+id/auth_email_edt"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/prompt_login_field"
                        android:inputType="textEmailAddress"
                        android:maxLines="1"
                        android:singleLine="true"
                        android:textColor="@color/mt_gray"/>
                </android.support.design.widget.TextInputLayout>
            </LinearLayout>


            <Button
                android:id="@+id/email_sign_in_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:text="@string/action_sign_in"
                android:textStyle="bold"
                android:fontFamily="sans-serif-smallcaps"
                android:textAllCaps="false"
                android:textColor="@android:color/white"
                android:background="@drawable/button_login"/>

            <Button
                android:id="@+id/forgotcred"
                android:layout_margin="14dp"
                android:layout_gravity="center"
                android:gravity="center_horizontal"
                android:text="@string/forgot_details"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
                android:visibility="gone"
                style="@style/Base.Widget.AppCompat.Button.Borderless"/>


            <Button
                android:id="@+id/sign_in_button"
                android:layout_gravity="center"
                android:layout_marginTop="15dp"
                android:gravity="center_horizontal"
                android:text="@string/no_account"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
                style="@style/Base.Widget.AppCompat.Button.Borderless"/>

        </LinearLayout>

    </ScrollView>
</LinearLayout>
