<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context=".RegisterActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/sign_up_toolbar"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:minHeight="?attr/actionBarSize">

        <TextView
            android:textStyle="bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/action_sign_up"
            android:textColor="@color/mt_gray"
            android:fontFamily="sans-serif-smallcaps"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"  />

    </android.support.v7.widget.Toolbar>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin">

            <ImageView
                android:layout_margin="25dp"
                android:src="@mipmap/ic_launcher"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:ignore="ContentDescription" />

            <!--Name-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:src="@drawable/ic_perm_identity"
                    tools:ignore="ContentDescription" />
                <Space
                    android:layout_width="14dp"
                    android:layout_height="wrap_content"/>
                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <EditText
                        android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
                        android:id="@+id/reg_name_edt"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/prompt_register_name"
                        android:inputType="text"
                        android:maxLines="1"
                        android:singleLine="true"
                        android:textColor="@color/mt_gray"/>
                </android.support.design.widget.TextInputLayout>
            </LinearLayout>


            <!--Email-->
            <LinearLayout
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:src="@drawable/ic_mail_outline"
                    tools:ignore="ContentDescription" />
                <Space
                    android:layout_width="14dp"
                    android:layout_height="wrap_content"/>
                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <EditText
                        android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
                        android:id="@+id/reg_email_edt"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/prompt_register_mail"
                        android:inputType="textEmailAddress"
                        android:maxLines="1"
                        android:singleLine="true"
                        android:textColor="@color/mt_gray"/>
                </android.support.design.widget.TextInputLayout>
            </LinearLayout>

            <!--Phone-->
            <LinearLayout
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:src="@drawable/ic_call_phone"
                    tools:ignore="ContentDescription" />
                <Space
                    android:layout_width="14dp"
                    android:layout_height="wrap_content"/>
                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <EditText
                        android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
                        android:id="@+id/reg_contact_edt"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/prompt_register_phone"
                        android:inputType="number"
                        android:maxLines="1"
                        android:maxLength="10"
                        android:singleLine="true"
                        android:textColor="@color/mt_gray"/>
                </android.support.design.widget.TextInputLayout>
            </LinearLayout>

            <!--Password-->
            <LinearLayout
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:src="@drawable/ic_lock_outline"
                    tools:ignore="ContentDescription" />
                <Space
                    android:layout_width="14dp"
                    android:layout_height="wrap_content"/>
                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <EditText
                        android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
                        android:id="@+id/reg_address1_edt"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="Enter Adddress line1"
                        android:inputType="text"
                        android:maxLines="1"
                        android:singleLine="true"
                        android:textColor="@color/mt_gray"/>
                </android.support.design.widget.TextInputLayout>
            </LinearLayout>

            <!--Password again-->
            <LinearLayout
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:src="@drawable/ic_lock_outline"
                    tools:ignore="ContentDescription" />
                <Space
                    android:layout_width="14dp"
                    android:layout_height="wrap_content"/>
                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <EditText
                        android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
                        android:id="@+id/reg_address2_edt"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="Enter Adddress line2"
                        android:inputType="text"
                        android:maxLines="1"
                        android:singleLine="true"
                        android:textColor="@color/mt_gray"/>
                </android.support.design.widget.TextInputLayout>
            </LinearLayout>
            <LinearLayout
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:src="@drawable/ic_lock_outline"
                    tools:ignore="ContentDescription" />
                <Space
                    android:layout_width="14dp"
                    android:layout_height="wrap_content"/>
                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <EditText
                        android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
                        android:id="@+id/reg_address3_edt"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="Enter Adddress line3"
                        android:inputType="text"
                        android:maxLines="1"
                        android:singleLine="true"
                        android:textColor="@color/mt_gray"/>
                </android.support.design.widget.TextInputLayout>
            </LinearLayout>
            <LinearLayout
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:src="@drawable/ic_lock_outline"
                    tools:ignore="ContentDescription" />
                <Space
                    android:layout_width="14dp"
                    android:layout_height="wrap_content"/>
                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <EditText
                        android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
                        android:id="@+id/reg_address4_edt"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="Enter Adddress line4"
                        android:inputType="text"
                        android:maxLines="1"
                        android:singleLine="true"
                        android:textColor="@color/mt_gray"/>
                </android.support.design.widget.TextInputLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <Spinner
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:id="@+id/usertype" />
            </LinearLayout>

            <LinearLayout
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:src="@drawable/ic_lock_outline"
                    tools:ignore="ContentDescription" />
                <Space
                    android:layout_width="14dp"
                    android:layout_height="wrap_content"/>
                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <EditText
                        android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
                        android:id="@+id/GSTN"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="Enter GSTN"
                        android:inputType="text"
                        android:maxLines="1"
                        android:singleLine="true"
                        android:textColor="@color/mt_gray"/>
                </android.support.design.widget.TextInputLayout>
            </LinearLayout>
            <LinearLayout
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:src="@drawable/ic_lock_outline"
                    tools:ignore="ContentDescription" />
                <Space
                    android:layout_width="14dp"
                    android:layout_height="wrap_content"/>
                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <EditText
                        android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
                        android:id="@+id/web"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="Enter Web address"
                        android:inputType="text"
                        android:maxLines="1"
                        android:singleLine="true"
                        android:textColor="@color/mt_gray"/>
                </android.support.design.widget.TextInputLayout>
            </LinearLayout>
            <LinearLayout
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:src="@drawable/ic_lock_outline"
                    tools:ignore="ContentDescription" />
                <Space
                    android:layout_width="14dp"
                    android:layout_height="wrap_content"/>
                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <EditText
                        android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
                        android:id="@+id/narration"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="Enter Narration"
                        android:inputType="text"
                        android:maxLines="1"
                        android:singleLine="true"
                        android:textColor="@color/mt_gray"/>
                </android.support.design.widget.TextInputLayout>
            </LinearLayout>

            <Button
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:id="@+id/reg_sign_up_button"
                style="?android:textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:text="@string/click_next"
                android:textStyle="bold"
                android:textColor="@android:color/white"
                android:fontFamily="sans-serif-smallcaps"
                android:textAllCaps="false"
                android:layout_marginBottom="20dp"
                android:background="@drawable/button_login"/>

        </LinearLayout>

    </ScrollView>
</LinearLayout>